app-instances.tf
/* Setup our aws provider */
provider "aws" {
  region  = "eu-central-1"
  profile = "stg"
}

resource "aws_instance" "master" {
  ami           = "ami-26c43149"
  instance_type = "t2.micro"
  security_groups = ["${aws_security_group.swarm.name}"]
  key_name = "public-key-name"

  provisioner "remote-exec" {
    inline = [
      "sudo apt-get update",
      "sudo apt-get install apt-transport-https ca-certificates",
      "sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D",
      "sudo sh -c 'echo \"deb https://apt.dockerproject.org/repo ubuntu-trusty main\" > /etc/apt/sources.list.d/docker.list'",
      "sudo apt-get update",
      "sudo apt-get install -y docker-engine=1.12.0-0~trusty"
    ]
    connection {
      type     = "ssh"
      user     = "ubuntu"
      private_key = "${file("/path/to/private/key")}"
    }
  }

  provisioner "file" {
    source = "proj"
    destination = "/home/ubuntu/"

    connection {
      type     = "ssh"
      user     = "ubuntu"
      private_key = "${file("/path/to/private/key")}"
    }
  }

  tags = { 
    Name = "swarm-master"
  }
}

resource "aws_instance" "slave" {
  count         = 2
  ami           = "ami-26c43149"
  instance_type = "t2.micro"
  security_groups = ["${aws_security_group.swarm.name}"]
  key_name = "public-key-name"


  provisioner "remote-exec" {
    inline = [
      "sudo apt-get update",
      "sudo apt-get install apt-transport-https ca-certificates",
      "sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D",
      "sudo sh -c 'echo \"deb https://apt.dockerproject.org/repo ubuntu-trusty main\" > /etc/apt/sources.list.d/docker.list'",
      "sudo apt-get update",
      "sudo apt-get install -y docker-engine=1.12.0-0~trusty"
    ]

    connection {
      type     = "ssh"
      user     = "ubuntu"
      private_key = "${file("/path/to/private/key")}"
    }
  }
  tags = { 
    Name = "swarm-${count.index}"
  }
}
